--- a/output/team.html
+++ b/output/team.html
@@ -30,9 +30,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 188236</li>
-            <li class="list-group-item">Email: <a href="mailto:cheryljfowlie@gmail.com">cheryljfowlie@gmail.com</a></li>
-            <li class="list-group-item">Office number: 123455555</li>
+            <li class="list-group-item">ID: 1234</li>
+            <li class="list-group-item">Email: <a href="mailto:cheryl.fowlie@email.com">cheryl.fowlie@email.com</a></li>
+            <li class="list-group-item">Office number: 412345678</li>
         </ul>
     </div>
 </div>
@@ -43,9 +43,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 234556</li>
+            <li class="list-group-item">ID: 134566</li>
             <li class="list-group-item">Email: <a href="mailto:john.smith@email.com">john.smith@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/johnsmith" target="_blank" rel="noopener noreferrer">johnsmith</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/john.smith" target="_blank" rel="noopener noreferrer">john.smith</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jane Doe</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 56346</li>
+            <li class="list-group-item">Email: <a href="mailto:jane.doe@email.com">jane.doe@email.com</a></li>
+            <li class="list-group-item">School: USYD </li>
         </ul>
     </div>
 </div>
